--- a/index.html
+++ b/index.html
@@ -5,98 +5,183 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO_DO_APP</title>
     <style>
-        *{
-            color: aliceblue;
-            padding: 0;
-            margin: 0;
-        }
-         body {
-            padding: 0;
-            background-color: hsl(0, 0%, 0%);
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .container{
-          
-            height: 90%;
-            width: 55%;
-            /* border: solid 3px; */
-        }
-        .input{
-            height: 40px;
-            width: 70%;
-            border: none;
-            border-radius: 10px;
-            color: black;
-        }
-        .input:focus{
-            border: none;
-        }
-        .add , span{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            background-color: hsl(0, 100%, 50%);
-            border-radius: 10px;
-            border: none;
-            padding: 10px;
-            height: 40px;
-            font-size: 15px;
-        }
-        span{
-            padding: 3px 20px;
-        }
-        .form{
-            padding-bottom: 4px;
-            gap: 10px;
-           border-radius: 8px;
-            height: 60px;
-            width: 100%;
-            background-color: rgba(255, 255, 255, 0.861);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .tasks{
-            padding-top: 20px;
-            padding-bottom: 20px;
-            display: flex;
-           flex-direction: column;
-           align-items: center;
-            justify-content: center;
-            border-radius: 10px;
-            margin-top: 20px;
-            background-color: rgba(255, 255, 255, 0.861);
-           
-            width: 100%;
-        }
-        .task{
-            cursor: pointer;
-            height: 40px;
-            width: 80%;
-            margin-bottom: 10px;
-            background-color: wheat;
-            font-size: 20px;
-           padding: 10px;
-            border: none;
-            border-radius: 10px;
-            color: black;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+* {
+    color: aliceblue;
+    padding: 0;
+    margin: 0;
+}
+body {
+    padding: 0;
+    background-color: hsl(0, 0%, 0%);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.container {
+    height: 90%;
+    width: 55%;
+    /* border: solid 3px; */
+}
+.input {
+    height: 40px;
+    width: 70%;
+    border: none;
+    border-radius: 10px;
+    color: black;
+}
+.input:focus {
+    border: none;
+}
+.add, span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: hsl(0, 100%, 50%);
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+    height: 40px;
+    font-size: 15px;
+}
+span {
+    padding: 3px 20px;
+}
+.form {
+    padding-bottom: 4px;
+    gap: 10px;
+    border-radius: 8px;
+    height: 60px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.861);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.tasks {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.861);
+    width: 100%;
+}
+.task {
+    cursor: pointer;
+    height: 40px;
+    width: 80%;
+    margin-bottom: 10px;
+    background-color: wheat;
+    font-size: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.done {
+    color: rgb(173, 173, 173);
+    background-color: gray;
+}
 
-        }
-        .done{
-            color: rgb(173, 173, 173);
-            background-color: gray;
-        }
-        /* .done~span{
-            color: lightslategray;
-        } */
+/* Media Queries for Responsiveness */
+@media (max-width: 1024px) { /* Large Devices */
+    .container {
+        width: 70%;
+    }
+    .input {
+        width: 60%;
+    }
+    .task {
+        width: 90%;
+        font-size: 18px;
+    }
+    .add, span {
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 768px) { /* Medium Devices */
+    .container {
+        width: 80%;
+    }
+    .input {
+        width: 60%;
+    }
+    .task {
+        width: 90%;
+        font-size: 18px;
+    }
+    .add, span {
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 480px) { /* Small Devices */
+    .container {
+        width: 91%;
+    }
+    .input {
+        width: 55%;
+    }
+    .add, span {
+        font-size: 12px;
+        padding: 6px;
+    }
+    .task {
+        width: 95%;
+        font-size: 16px;
+    }
+    .form {
+        flex-direction: column;
+        height: auto;
+        gap: 5px;
+        padding: 10px;
+    }
+    .input, .add {
+        width: 100%;
+    }
+}
+
+@media (max-width: 360px) { /* Extra Small Devices */
+    .container {
+        width: 100%;
+        height: 100%;
+    }
+    .input {
+        width: 50%;
+        font-size: 14px;
+    }
+    .add, span {
+        font-size: 10px;
+        padding: 4px;
+        height: 35px;
+    }
+    .task {
+        width: 100%;
+        font-size: 14px;
+    }
+    .form {
+        margin: 10px;
+        padding: 5px;
+        gap: 5px;
+    }
+    .tasks {
+        padding: 10px;
+        gap: 5px;
+    }
+}
+
     </style>
 </head>
 <body>
@@ -108,9 +193,7 @@
             <input type="submit" class="add" value="ADD TASK" >
         </div>
         <div class="tasks">
-            <div class="taskone"></div>
-            <div class="taskone"></div>
-            <div class="taskone"></div>
+  
 
         </div>
     </div>
